<resources>
    <string name="app_name">OnisCalculator</string>

    <string name="enterValueText">0</string>

    <string name="DELText">DEL</string>

    <string name="additionText">+</string>
    <string name="subtractionText">-</string>

    <string name="divisionText">/</string>
    <string name="multiplyText">*</string>

    <string name="equalSignText">=</string>

    <string name="decimalText">.</string>

    <string name="zeroText">0</string>
    <string name="oneText">1</string>
    <string name="twoText">2</string>
    <string name="threeText">3</string>
    <string name="fourText">4</string>
    <string name="fiveText">5</string>
    <string name="sixText">6</string>
    <string name="sevenText">7</string>
    <string name="eightText">8</string>
    <string name="nineText">9</string>

    <string name="square_root_symbol">√</string>

    <string name="xSquaredText">x<sup><small>2</small></sup></string>
    <string name="xPowerYText">x<sup><small>y</small></sup></string>

    <string name="naturalLogText">ln</string>
    <string name="LogText">log</string>

    <string name="parenthesesLText">(</string>
    <string name="parenthesesRText">)</string>

    <string name="allClearText">AC</string>

    <string name="signChangeText">+/-</string>

    <string name="percentageText">%</string>

    <string name="squareRootText">√</string>
</resources>