<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/app_background"
        tools:context=".MainActivity">
    <TextView
            android:textColor="@color/grey_700"
            android:textAlignment="textEnd"
            android:textSize="25sp"
            android:layout_width="120dp"
            android:layout_height="52dp"
            android:id="@+id/previousAnswer"
            tools:ignore="UnknownId"
            android:gravity="end"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.986"/>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="369dp"
            android:layout_height="473dp"
            android:id="@+id/constraintLayout"
            tools:ignore="MissingConstraints"
            android:layout_marginTop="58dp"
            app:layout_constraintTop_toBottomOf="@+id/calculationText" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="65dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="21dp" android:layout_marginStart="21dp" android:layout_marginEnd="21dp"
            android:layout_marginRight="21dp" app:layout_constraintEnd_toEndOf="parent">

        <Button
                android:text="@string/square_root_symbol"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:id="@+id/button2"
                android:background="@drawable/button_background"
                app:layout_constraintEnd_toStartOf="@+id/button4"
                android:onClick="pushSqrtButton"
                android:layout_marginRight="5dp" android:layout_marginEnd="5dp" android:layout_marginBottom="3dp"
                app:layout_constraintBottom_toTopOf="@+id/button17"/>
        <Button
                android:text="@string/DELText"
                android:layout_width="163dp"
                android:layout_height="60dp"
                android:id="@+id/button"
                android:background="@drawable/button_background"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="10dp"
                android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:onClick="pushDELButton"/>
        <Button
                android:text="@string/naturalLogText"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:id="@+id/button4"
                android:background="@drawable/button_background"
                android:layout_marginBottom="3dp"
                app:layout_constraintBottom_toTopOf="@+id/button7"
                app:layout_constraintEnd_toStartOf="@+id/button22" android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp" android:onClick="pushNaturalLogButton"/>
        <Button
                android:text="@string/multiplyText"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:id="@+id/button5"
                android:background="@drawable/button_background"
                android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="3dp"
                app:layout_constraintBottom_toTopOf="@+id/button28" android:onClick="pushMultiplyButton"/>
        <Button
                android:text="@string/decimalText"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:id="@+id/button6"
                android:background="@drawable/button_background"
                android:layout_marginBottom="3dp"
                app:layout_constraintBottom_toTopOf="@+id/button16" app:layout_constraintEnd_toStartOf="@+id/button15"
                android:layout_marginEnd="5dp" android:layout_marginRight="5dp" android:onClick="pushDecimalButton"/>
        <Button
                android:text="@string/xSquaredText"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:id="@+id/button7"
                android:background="@drawable/button_background"
                app:layout_constraintEnd_toStartOf="@+id/button"
                android:layout_marginEnd="5dp" android:layout_marginRight="5dp"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="10dp"
                android:onClick="pushXSquaredButton"/>
        <Button
                android:text="@string/subtractionText"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:id="@+id/button8"
                android:background="@drawable/button_background"
                android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="3dp"
                app:layout_constraintBottom_toTopOf="@+id/button5" android:onClick="pushSubtractionButton"/>
        <Button
                android:text="@string/nineText"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:id="@+id/button9"
                android:background="@drawable/button_background"
                android:layout_marginBottom="3dp"
                app:layout_constraintBottom_toTopOf="@+id/button27" app:layout_constraintEnd_toStartOf="@+id/button5"
                android:layout_marginEnd="3dp" android:layout_marginRight="3dp" android:onClick="pushNineButton"/>
        <Button
                android:text="@string/eightText"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:id="@+id/button10"
                android:background="@drawable/button_background"
                android:layout_marginBottom="3dp"
                app:layout_constraintBottom_toTopOf="@+id/button23" app:layout_constraintEnd_toStartOf="@+id/button9"
                android:layout_marginEnd="5dp" android:layout_marginRight="5dp" android:onClick="pushEightButton"/>
        <Button
                android:text="@string/additionText"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:id="@+id/button11"
                android:background="@drawable/button_background"
                android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="3dp"
                app:layout_constraintBottom_toTopOf="@+id/button8" android:onClick="pushAdditionButton"/>
        <Button
                android:text="@string/sixText"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:id="@+id/button12"
                android:background="@drawable/button_background"
                android:layout_marginBottom="3dp"
                app:layout_constraintBottom_toTopOf="@+id/button9" app:layout_constraintEnd_toStartOf="@+id/button8"
                android:layout_marginEnd="3dp" android:layout_marginRight="3dp" android:onClick="pushSixButton"/>
        <Button
                android:text="@string/fiveText"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:id="@+id/button13"
                android:background="@drawable/button_background"
                android:layout_marginBottom="3dp"
                app:layout_constraintBottom_toTopOf="@+id/button10"
                app:layout_constraintEnd_toStartOf="@+id/button9" android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp" android:onClick="pushFiveButton"/>
        <Button
                android:text="@string/signChangeText"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:id="@+id/button14"
                android:background="@drawable/button_background"
                android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="3dp"
                app:layout_constraintBottom_toTopOf="@+id/button11" android:onClick="pushSignChangeButton"/>
        <Button
                android:text="@string/threeText"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:id="@+id/button15"
                android:background="@drawable/button_background"
                android:layout_marginBottom="3dp"
                app:layout_constraintBottom_toTopOf="@+id/button12" app:layout_constraintEnd_toStartOf="@+id/button11"
                android:layout_marginEnd="3dp" android:layout_marginRight="3dp" android:onClick="pushThreeButton"/>
        <Button
                android:text="@string/twoText"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:id="@+id/button16"
                android:background="@drawable/button_background"
                android:layout_marginBottom="3dp"
                app:layout_constraintBottom_toTopOf="@+id/button13" app:layout_constraintEnd_toStartOf="@+id/button12"
                android:layout_marginEnd="5dp" android:layout_marginRight="5dp" android:onClick="pushTwoButton"/>
        <Button
                android:text="@string/xPowerYText"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:id="@+id/button17"
                android:background="@drawable/button_background"
                android:onClick="pushXPowerYButton"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="10dp" app:layout_constraintEnd_toStartOf="@+id/button7"
                android:layout_marginRight="5dp" android:layout_marginEnd="5dp"/>
        <Button
                android:text="@string/sevenText"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:id="@+id/button18"
                android:background="@drawable/button_background"
                android:layout_marginBottom="3dp" app:layout_constraintBottom_toTopOf="@+id/button24"
                app:layout_constraintEnd_toStartOf="@+id/button10" android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp" android:onClick="pushSevenButton"/>
        <Button
                android:text="@string/fourText"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:id="@+id/button19"
                android:background="@drawable/button_background"
                android:layout_marginBottom="3dp" app:layout_constraintBottom_toTopOf="@+id/button18"
                app:layout_constraintEnd_toStartOf="@+id/button13" android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp" android:onClick="pushFourButton"/>
        <Button
                android:text="@string/oneText"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:id="@+id/button20"
                android:background="@drawable/button_background"
                android:layout_marginBottom="3dp"
                app:layout_constraintBottom_toTopOf="@+id/button19" app:layout_constraintEnd_toStartOf="@+id/button16"
                android:layout_marginEnd="5dp" android:layout_marginRight="5dp" android:onClick="pushOneButton"/>
        <Button
                android:text="@string/parenthesesLText"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:id="@+id/button24"
                android:background="@drawable/button_background"
                app:layout_constraintEnd_toStartOf="@+id/button23"
                android:layout_marginEnd="5dp" android:layout_marginRight="5dp"
                android:onClick="pushParenthesesLButton" android:layout_marginBottom="3dp"
                app:layout_constraintBottom_toTopOf="@+id/button2"/>
        <Button
                android:text="@string/equalSignText"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:id="@+id/button25"
                android:background="@drawable/button_background"
                android:layout_marginBottom="3dp"
                app:layout_constraintBottom_toTopOf="@+id/button15" app:layout_constraintEnd_toStartOf="@+id/button14"
                android:layout_marginEnd="3dp" android:layout_marginRight="3dp"
                android:onClick="pushEqualButton"/>
        <Button
                android:text="@string/zeroText"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:id="@+id/button26"
                android:background="@drawable/button_background"
                android:layout_marginBottom="3dp"
                app:layout_constraintBottom_toTopOf="@+id/button20" app:layout_constraintEnd_toStartOf="@+id/button6"
                android:layout_marginEnd="5dp" android:layout_marginRight="5dp" android:onClick="pushZeroButton"/>
        <Button
                android:text="@string/parenthesesRText"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:id="@+id/button23"
                android:background="@drawable/button_background"
                android:layout_marginBottom="3dp"
                app:layout_constraintBottom_toTopOf="@+id/button4" app:layout_constraintEnd_toStartOf="@+id/button27"
                android:layout_marginEnd="5dp" android:layout_marginRight="5dp"
                android:onClick="pushParenthesesRButton"/>
        <Button
                android:text="@string/percentageText"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:id="@+id/button27"
                android:background="@drawable/button_background"
                android:layout_marginBottom="3dp"
                app:layout_constraintBottom_toTopOf="@+id/button22" app:layout_constraintEnd_toStartOf="@+id/button28"
                android:layout_marginEnd="3dp" android:layout_marginRight="3dp" android:onClick="pushPercentageButton"/>
        <Button
                android:text="@string/divisionText"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:id="@+id/button28"
                android:background="@drawable/button_background"
                android:layout_marginBottom="3dp"
                app:layout_constraintBottom_toTopOf="@+id/button22" android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp" app:layout_constraintEnd_toEndOf="parent"
                android:onClick="pushDivideButton"/>
        <Button
                android:text="@string/allClearText"
                android:layout_width="163dp"
                android:layout_height="60dp"
                android:id="@+id/button22"
                android:background="@drawable/button_background"
                app:layout_constraintBottom_toTopOf="@+id/button" android:layout_marginBottom="3dp"
                android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:onClick="pushACButton"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <EditText
            android:layout_width="404dp"
            android:layout_height="90dp"
            android:inputType="textPersonName"
            android:hint="@string/enterValueText"

            android:textAlignment="textEnd"
            android:textSize="35sp"
            android:textStyle="bold"

            android:textColorHint="@color/dark_purple_300"

            android:textColor="@color/black"
            android:importantForAutofill="no"
            android:ems="10"
            android:id="@+id/calculationText"
            android:gravity="end"
            app:layout_constraintTop_toBottomOf="@+id/previousAnswer" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.428"/>
</androidx.constraintlayout.widget.ConstraintLayout>